--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/ussd-code
+spring.datasource.url=jdbc:postgresql://localhost:5432/ussdcode
 spring.datasource.username=postgres
 spring.datasource.password=root123
-spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.data.rest.base-path=/api
+spring.datasource.initialization-mode=always
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+#spring.jpa.show-sql=true
+#spring.data.rest.base-path=/api
