--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/ussd-code
+spring.datasource.url=jdbc:postgresql://localhost:5432/ussdcode
 spring.datasource.username=postgres
 spring.datasource.password=root123
 spring.datasource.initialization-mode=always
@@ -8,3 +8,4 @@ spring.jpa.show-sql=true
 spring.data.rest.base-path=/api
 
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+server.port=80
