--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/ussd-code
+spring.datasource.url=jdbc:postgresql://localhost:5432/FileIO
 spring.datasource.username=postgres
-spring.datasource.password=root123
+spring.datasource.password=05798510
 spring.datasource.initialization-mode=always
 
 spring.jpa.hibernate.ddl-auto=create
