--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/ussd_code
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=admin
 spring.datasource.initialization-mode=always
 
 spring.jpa.hibernate.ddl-auto=create
